# flask-store

./: .env  README.md  pyproject.toml  settings.toml
app/: __init__.py  extensions.py  models.py  routes.py  schemas.py
app/enums/: __init__.py
app/resources/: auth.py  order.py  product.py
app/services/: mail.py
app/templates/mails/: forget-password.html  forget-password.txt  welcome.html  welcome.txt
migrations/versions/: 00f07fe4a291_.py  26ef849ad5c2_.py  32cb32d0e0d7_.py  63d442b72879_.py
